Small fix in yaml

--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -1,16 +1,16 @@
 name: Pull Request
 
 on:
-  pull_requests:
+  pull_request:
     branches:
-      -main
+      - develop
   workflow_dispatch:
 
 jobs:
   test:
     runs-on: macos-13
     steps:
-      - users: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
@@ -32,12 +32,12 @@ jobs:
       - name: Swift Packages Cache
         uses: actions/cache@v2
         id: cache
-        with: 
+        with:
           path: |
             Build/SourcePackages
             Build/Build/Products
-          key: ${{ runner.os }}-deps-v1-${{ hashFiles('BILDsolid.xcodeproj/project.xcworkspace/xcsharedata/swiftpm/Package.resolved') }}
-          restore-keys: ${{ runner.os }}-deps-v1
+          key: ${{ runner.os }}-deps-v1-${{ hashFiles('BILDsolid.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
+          restore-keys: ${{ runner.os }}-deps-v1-
 
       - name: Run Tests (No Cache)
         if: steps.setup.outputs.cache-hit != true
